# File_directory_system

./: CMakeLists.txt  README.md  main.cpp
Interface/: Interface.cpp  Interface.h
kernel/Directory_Tree/: Directory_Bin_Tree.cpp  Directory_Bin_Tree.h  Directory_Tree.cpp  Directory_Tree.h
kernel/FCB/: FCB.cpp  FCB.h
kernel/File_Node/: File_Node.cpp  File_Node.h
kernel/Indexing_Node/: Indexing_Node.cpp  Indexing_Node.h
